--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An IDE for creating resource packs",
   "main": "main.js",
   "scripts": {
-    "start": "tsc && electron ."
+    "start": "tsc && electron .",
+    "postinstall": "curl -o public/lib/bootstrap.bundle.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   },
   "author": "Alvin",
   "license": "MIT",
@@ -15,7 +16,9 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/bootstrap": "^5.0.13",
     "bootstrap-icons": "^1.3.0",
+    "ejs": "^3.1.6",
     "monaco-editor": "^0.22.3"
   }
 }
